--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,48 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+        </nav>
+      </div><!-- end header -->
 
-    <header>
-      <div class="container">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-
-      </div>
-    </header>
-
-    <div class="container">
-      <div style="float: left; width: 70%">
-   
-      <section id="main_content">
-        {{ content }}
-      </section>
-      </div>
-    </div>
-
-    <div>
-      <ul>
-      </section>
+    <div class="wrapper" style="margin-left: 20px; max-width: 80%">
+      <section style="float: left; width: 30%">
+        <div id="side">
         {% for post in site.posts %}
-          <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-          </li>
+           <ul>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+           </ul>
         {% endfor %}
-      </ul>
+        </div>
+      </section>
+
+      <section style="float: left; width: 70%">
+        <div id="title">
+          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <hr>
+          <span class="credits left">GitHub <a href="{{ site.github_url }}/{{ site.github_username }}">{{ site.github_username }}</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
+        {{ content }}
+
+      </section>
+
     </div>
 
-    <hr/>
-
-    <footer>
-       <div class="container">
-         <h3>{{ site.description | default: site.github.project_tagline }}</h3>
-       </div>
-    </footer>
   </body>
 </html>
