--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,10 @@
 
       <section style="float: left; width: 70%">
         <div id="title">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <h1><a href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">GitHub <a href="{{ site.github_url }}/{{ site.github_username }}">{{ site.github_username }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits right">GitHub <a href="{{ site.github_url }}{{ site.github_username }}">{{ site.github_username }}</a></span>
         </div>
 
         {{ content }}
