[GraemeO] Add post category and tidy up left navigation. Rename Python unit test post title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,14 @@
     <div class="wrapper" style="margin-left: 20px; max-width: 80%">
       <section style="float: left; width: 30%">
         <div id="side">
-        {% for post in site.posts %}
-           <ul>
-              <a href="{{ post.url }}">{{ post.title }}</a>
-           </ul>
+        {% for category in site.categories %}
+           {% capture category_name %}{{ category | first }}{% endcapture %}
+           <h4>{{ category_name }}</h4>
+           {% for post in site.categories[category_name] %}
+              <ul>
+                 <a href="{{ post.url }}">{{ post.title }}</a>
+              </ul>
+           {% endfor %}
         {% endfor %}
         </div>
       </section>
