--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
+    {% if site.google_analytics and jekyll.environment == 'production' %}
+       {% include analytics.html %}
+    {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
