[GraemeO] Enable Jekyll SEO plugin and fix title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,9 @@
     {% if site.google_analytics and jekyll.environment == 'production' %}
        {% include analytics.html %}
     {% endif %}
+    <title>{{ site.title }} - {{ site.description }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    {% seo %}
   </head>
   <body>
       <div id="header">
