[GraemeO] Add sitemap plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     {% if site.google_analytics and jekyll.environment == 'production' %}
        {% include analytics.html %}
     {% endif %}
-    <title>{{ site.title }} - {{ site.description }}</title>
+    <title>{{ site.description }} - {{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     {% seo %}
   </head>
